--- a/package.json
+++ b/package.json
@@ -1,19 +1,11 @@
 {
-  "name": "price-compare-backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.7.8",
-    "cheerio": "^1.0.0",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "express-rate-limit": "^7.1.5",
-    "morgan": "^1.10.0",
-    "node-cache": "^5.1.2",
-    "puppeteer": "^23.4.1"
+    "express": "^4.18.2",
+    "puppeteer": "^21.3.8",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
