--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12"
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5"
   }
 }
