--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "price-compare-backend",
   "version": "1.0.0",
-  "type": "module",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.7.8",
-    "cheerio": "^1.0.0-rc.12",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "morgan": "^1.10.0"
+    "express": "^4.18.2",
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
